# VulkanPlayGround

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  AUTOMATED_CRASH_REPORTING.md  CMakeLists.txt  README.md  log_nvprosample.txt  test_crash_reporter.cpp
code/: ModelLoader.cpp  ModelLoader.h  PlayApp.cpp  PlayApp.h  RTRenderer.cpp  RTRenderer.h  Renderer.h  Resource.h  SceneNode.cpp  SceneNode.h  VolumeRenderer.cpp  VolumeRenderer.h  host_device.h  main.cpp  pch.h  utils.cpp  utils.hpp
code/controlComponent/: controlComponent.cpp  controlComponent.h
code/core/: DataWriter.cpp  DataWriter.h  JobSystem.cpp  JobSystem.h  PlayCamera.cpp  PlayCamera.h  RefCounted.h
code/core/runtime/: EngineLoop.cpp  EngineLoop.h  RenderSession.cpp  RenderSession.h  RuntimeConfig.h  RuntimeGuiHost.cpp  RuntimeGuiHost.h  SdlWindow.cpp  SdlWindow.h  VulkanRuntime.cpp  VulkanRuntime.h
code/debugger/: debugger.cpp  debugger.h
code/debugger/Nsight/graphics/include/: NGFX_Injection.h
code/editor/: ControlPanel.cpp  ControlPanel.h  EditorHtml.cpp  EditorHtml.h  EditorRegistration.cpp  EditorRegistration.h  EditorRegistry.cpp  EditorRegistry.h  EditorRuntimeContext.cpp  EditorRuntimeContext.h  EditorUiModel.cpp  EditorUiModel.h  MainBar.cpp  MainBar.h  QtRuntimeEditorWindow.cpp  QtRuntimeEditorWindow.h  RenderModeEditor.cpp  RenderModeEditor.h  RenderModeTabs.cpp  RenderModeTabs.h  RuntimeEditor.cpp  RuntimeEditor.h  SceneInspectorPanel.cpp  SceneInspectorPanel.h  SceneManagerEditor.cpp  SceneManagerEditor.h
code/reflection/: EditorReflection.cpp  RuntimeReflection.cpp
code/renderer/: DeferRendering.cpp  DeferRendering.h  GBufferConfig.h  GaussianRenderer.cpp  GaussianRenderer.h  MeshCollector.cpp  MeshCollector.h  RTRenderer.cpp  RTRenderer.h  Renderer.cpp  Renderer.h  ShadingRateRenderer.cpp  ShadingRateRenderer.h  VolumeRenderer.cpp  VolumeRenderer.h
code/renderer/GaussianPass/: GaussianDrawMeshPass.cpp  GaussianDrawMeshPass.h  GaussianSortPass.cpp  GaussianSortPass.h
code/renderer/renderPasses/: BaseColorPass.cpp  BaseColorPass.h  GBufferPass.cpp  GBufferPass.h  LightPass.cpp  LightPass.h  PostProcessPass.cpp  PostProcessPass.h  PreDepthPass.cpp  PreDepthPass.h  PresentPass.cpp  PresentPass.h  RenderPass.cpp  RenderPass.h  TransimissionPass.cpp  TransimissionPass.h  VolumeRenderPass.cpp  VolumeRenderPass.h  VolumeSkyPass.cpp  VolumeSkyPass.h
code/resourceManagement/: AssetLoadingServer.cpp  AssetLoadingServer.h  CpuScene.cpp  CpuScene.h  DescriptorManager.cpp  DescriptorManager.h  FrameBufferCache.cpp  FrameBufferCache.h  GpuScene.cpp  GpuScene.h  Material.cpp  Material.h  ModelLoader.cpp  ModelLoader.h  ModelLoading.cpp  ModelLoading.h  ModelLoadingConfig.h  ModelLoadingInternal.h  PConstantType.h.slang  PipelineCacheManager.cpp  PipelineCacheManager.h  PlayAllocator.cpp  PlayAllocator.h  PlayProgram.cpp  PlayProgram.h  PlayScene.cpp  PlayScene.h  RDG.cpp  RDG.h  RasterGpuScene.cpp  RasterGpuScene.h  RenderPass.cpp  RenderPass.h  RenderPassCache.cpp  RenderPassCache.h  Resource.cpp  Resource.h  SceneAssets.cpp  SceneAssets.h  SceneManager.cpp  (+7 more)
code/resourceManagement/RDG/: BaseDag.cpp  BaseDag.h  RDG.cpp  RDG.h  RDGHandle.h  RDGPasses.cpp  RDGPasses.hpp  RDGPreDefine.h  RDGResources.cpp  RDGResources.h  RDGShaderParameters.hpp
crash_dumps/: .gitkeep
resource/skybox/: test.hdr
shaders/: Hdevice.h  common.glsl  common.slang  graphic.frag  graphic.vert  host_device.h  outputBlit.frag  pathtrace.glsl  post.frag  post.vert  raygen.rgen  rayhit.rchit  raymiss.rmiss  shadowmiss.rmiss  slangtest.slang  test.frag  utility.glsl
shaders/VRS/: computeShadingRate.comp  vrs.frag  vrs.vert
shaders/newShaders/: DefaultGbuffer.frag.slang  DefaultGbuffer.vert.slang  DefaultLightPass.frag.slang  Hdevice.h  common.slang  postProcess.comp.slang  postProcess.frag.slang  postProcess.vert.slang  present.frag.slang  present.vert.slang  skyBoxProgram.frag.slang  transmittanceLut.comp.slang
shaders/newShaders/deferRenderer/atmosphere/: multiScatteringLut.comp.slang  raymarching.slang  skyBoxProgram.frag.slang  skyViewLut.comp.slang  transmittanceLut.comp.slang
shaders/newShaders/deferRenderer/gbuffer/: DefaultGbuffer.frag.slang  DefaultGbuffer.vert.slang  GBufferCommon.h.slang
shaders/newShaders/deferRenderer/lighting/: DefaultLightPass.frag.slang
shaders/newShaders/gaussian/: gaussianCulling.comp.slang  gaussianDraw.frag.slang  gaussianDraw.mesh.slang  gaussianLib.h.slang
shaders/volumeRender/: common.glsl  gradiant.comp  volumeAccumulate.comp  volumeGenRay.comp  volumePostProcess.comp  volumeRadiance.comp
spv/: graphic.frag.spv  graphic.vert.spv  post.frag.spv  post.vert.spv  raygen.rgen.spv  rayhit.rchit.spv  raymiss.rmiss.spv  shadowmiss.rmiss.spv
